force-app/main/default/objects/Dispute__c/Dispute__c.object-meta.xml
<CustomObject>
    <label>Dispute</label>
    <nameField>
        <displayFormat>D-{000000000}</displayFormat>
        <label>Dispute Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disputes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>