force-app/main/default/objects/Dispute__c/fields/Authorized_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Transaction__c</fullName>
    <label>Authorized Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>