force-app/main/default/objects/Dispute__c/fields/Date_Bank_Received_Provisional_Credit__c.field-meta.xml
<CustomField>
    <fullName>Date_Bank_Received_Provisional_Credit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Bank Received Provisional Credit</label>
    <type>Date</type>
</CustomField>