force-app/main/default/objects/Dispute__c/fields/Date_Dispute_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Dispute_Closed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Dispute Closed</label>
    <type>Date</type>
</CustomField>