force-app/main/default/objects/Dispute__c/fields/Dispute_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Submitted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dispute Submitted Date</label>
    <type>Date</type>
</CustomField>