force-app/main/default/objects/Dispute__c/fields/Final_Credit_Letter_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Credit_Letter_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Credit Letter Date</label>
    <type>Date</type>
</CustomField>