force-app/main/default/objects/Dispute__c/fields/Loss_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loss_Amount__c</fullName>
    <label>Loss Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>