force-app/main/default/objects/Dispute__c/fields/Merchant_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Contacted__c</fullName>
    <label>Merchant Contacted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Contacted</fullName>
                <default>true</default>
                <label>Not Contacted</label>
            </value>
            <value>
                <fullName>1st Attempt</fullName>
            </value>
            <value>
                <fullName>2nd Attempt</fullName>
            </value>
            <value>
                <fullName>3rd Attempt</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Unable to Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>