force-app/main/default/objects/Dispute__c/fields/Merchant_Name__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Merchant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>