force-app/main/default/objects/Dispute__c/fields/Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes/Comments</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>