force-app/main/default/objects/Dispute__c/fields/Provisional_Credit_Letter_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Credit_Letter_to_Customer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provisional Credit Letter to Customer</label>
    <type>Date</type>
</CustomField>