force-app/main/default/objects/Dispute__c/fields/Reason_For_Loss__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Loss__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason For Loss</label>
    <type>TextArea</type>
</CustomField>