force-app/main/default/objects/Dispute__c/fields/Recovered_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recovered_Amount__c</fullName>
    <label>Recovered Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>