force-app/main/default/objects/Dispute__c/fields/Signed_Notice_Given_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Notice_Given_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signed Notice Given Date</label>
    <type>Date</type>
</CustomField>