force-app/main/default/objects/Dispute__c/fields/Verbal_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Notice_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verbal Notice Date</label>
    <type>Date</type>
</CustomField>