force-app/main/default/objects/Dispute__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Case__c</columns>
    <columns>Authorized_Transaction__c</columns>
    <columns>Merchant_Name__c</columns>
    <columns>Dispute_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Financial_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>